# rpotool

./: .gitignore  Cargo.toml  Makefile  README.md  ei_hab_chicken_universe_glitch.glb  ei_hatchery_universe_glitch.glb  hab_chicken_universe.rpo  rpotool  temp.glb  temp.rpo  triangle.glb
.github/workflows/: compile.yml
blender/: egg_inc_gltf_import.py
config/: config.py
csrc/: rpotool.c
src/: convert.c  convert.h  fetch.c  fetch.h  glb.rs  main.c  main.rs  rpotool.c
