[package]
name = "rpotool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
flate2 = { version = "1.0.30", features = ["zlib"], default-features = false }
reqwest = { version = "0.12.5", features = ["blocking"] }